--- a/ltx/paper_refs.bib
+++ b/ltx/paper_refs.bib
@@ -240,8 +240,13 @@
 }
 
 
-
-
+% gelman book
+@book{gelman2004bayesian,
+  title={Bayesian data analysis},
+  author={Gelman, A.},
+  year={2004},
+  publisher={CRC press}
+}
 
 
 
